--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
   width: 100%;
   height: 511px;
   background-color: #300000;
-  }
+}
 
 .intro > h1 {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 270px; /*Adjust after navbar*/
-  margin-bottom: 240px; /*Adjust after navbar*/
+  margin-top: 254px; /*Adjust after navbar*/
+  margin-bottom: 254px; /*Adjust after navbar*/
   font-family: "proxima-nova";
   color: #eeeeee;
   font-size: 50px;
@@ -18,19 +18,18 @@
 
 .about-me {
   width: 100%;
-  height: 602px;
+  height: 613px;
   background-color: #fff2dd;
-  margin-bottom: 475px;
   }
 
 .about-me > h1 {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 85px; 
+  margin-top: 78px; 
   font-family: "proxima-nova";
   color:  #333333;
-  font-size: 80px;
+  font-size: 64px;
   font-weight: 700;
 }
 
@@ -40,14 +39,15 @@
   margin-right: 150px;
   font-family: "ff-tisa-web-pro";
   color: #333333;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 22px;
+  font-weight: 400;
   line-height: 30px;
+  width: 650px;
 }
 
 .works {
   width: 100%;
-  height: 1092px;
+  height: 1017px;
   background-color: #ffffff;
 }
 
@@ -55,11 +55,13 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 90px;
+  margin-top: 77px;
   font-family: "proxima-nova";
   color:  #333333;
-  font-size: 80px;
-  font-weight: 700; 
+  font-size: 64px;
+  font-weight: 700;
+  width: 180px;
+  height: 45px;   
 }
 
 .contact-me {
