Code simplification and animation to last word in intro section.

--- a/css/partials/_intro.scss
+++ b/css/partials/_intro.scss
@@ -1,11 +1,9 @@
-.intro {
-  .intro-first-adjective {
-    vertical-align: top;
-    width: 0;
-    height: 50px;
+.intro-noun {
+  vertical-align: top;
+  width: 0;
+  height: 50px;
 
-    > span {
-      position: absolute;
-    }
+  > span {
+    position: absolute;
   }
 }
