--- a/css/main.scss
+++ b/css/main.scss
@@ -1,76 +1,6 @@
+@import "partials/header";
 @import "partials/intro";
-
-.intro {
-  width: 100%;
-  height: 511px;
-  background-color: #300000;
-}
-
-.intro > h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 254px; /*Adjust after navbar*/
-  margin-bottom: 254px; /*Adjust after navbar*/
-  font-family: "proxima-nova";
-  color: #eeeeee;
-  font-size: 50px;
-  font-weight: 700;
-}
-
-.about-me {
-  width: 100%;
-  height: 613px;
-  background-color: #fff2dd;
-  }
-
-.about-me > h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 78px; 
-  font-family: "proxima-nova";
-  color:  #333333;
-  font-size: 64px;
-  font-weight: 700;
-}
-
-.about-me > p {
-  text-align: left;
-  margin-left: 150px;
-  margin-right: 150px;
-  font-family: "ff-tisa-web-pro";
-  color: #333333;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 30px;
-  width: 650px;
-}
-
-.works {
-  width: 100%;
-  height: 1017px;
-  background-color: #ffffff;
-}
-
-.works > h1 {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 77px;
-  font-family: "proxima-nova";
-  color:  #333333;
-  font-size: 64px;
-  font-weight: 700;
-  width: 180px;
-  height: 45px;   
-}
-
-.contact-me {
-  font-family: "proxima-nova";
-  background: #333333;
-  text-align: center;
-  height: 500px;
-  padding: 100px;
-  color: white;
-}
+@import "partials/about-me";
+@import "partials/works";
+@import "partials/contact-me";
+@import "partials/footer";
