--- a/css/partials/_intro.scss
+++ b/css/partials/_intro.scss
@@ -1,3 +1,21 @@
+.intro {
+  width: 100%;
+  height: 511px;
+  background-color: #300000;
+}
+
+.intro > h1 {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 254px; /*Adjust after navbar*/
+  margin-bottom: 254px; /*Adjust after navbar*/
+  font-family: "proxima-nova";
+  color: #eeeeee;
+  font-size: 50px;
+  font-weight: 700;
+}
+
 .intro-noun {
   vertical-align: top;
   width: 0;
