--- a/css/partials/_contact-me.css
+++ b/css/partials/_contact-me.css
@@ -2,7 +2,7 @@
   font-family: "proxima-nova";
   background: #333333;
   text-align: center;
-  height: 500px;
+  height: 90vh;
   padding: 100px;
   color: white;
 }
