--- a/css/partials/_navbar.css
+++ b/css/partials/_navbar.css
@@ -20,3 +20,34 @@
 .navbar-nav.navbar-right:last-child {
   margin-right: 25px;
 }
+
+.nav > li > a:focus,
+.nav > li > a:hover {
+  background-color: inherit;
+}
+
+.navbar-toggle {
+  border: 0;
+  padding: 0;
+  margin-top: 25px;
+  margin-right: 25px;
+}
+
+.navbar-toggle i {
+  color: #fff;
+  margin-bottom: 0;
+}
+
+.navbar-collapse {
+  margin-top: 16px;
+  border-top: 1px solid #270000;
+  border-radius: 0;
+  box-shadow: none;
+}
+
+@media (min-width: 768px) {
+  .navbar-collapse.collapse {
+    margin-top: 0;
+    border: 0;
+  }
+}
