--- a/css/partials/_intro.css
+++ b/css/partials/_intro.css
@@ -1,25 +1,28 @@
 .intro {
+  position: relative;
   width: 100%;
   height: 90vh;
   background-color: #300000;
 }
 
 .intro > h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0 25px;
+  width: 100%;
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 254px; /*Adjust after navbar*/
-  margin-bottom: 254px; /*Adjust after navbar*/
-  font-family: "proxima-nova";
-  color: #eeeeee;
-  font-size: 50px;
   font-weight: 700;
+  color: #eee;
 }
 
 .intro-noun {
   vertical-align: top;
   width: 0;
-  height: 50px;
 }
 
 .intro-noun > span {
