--- a/css/base/_globals.css
+++ b/css/base/_globals.css
@@ -10,6 +10,19 @@ a:hover {
   text-decoration: none;
 }
 
+.triangle {
+  position: absolute;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
+  bottom: -33px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 33px 42.5px 0 42.5px;
+}
+
 @media (min-width: 992px) {
   h1 {
     font-size: 46px;
