--- a/css/partials/_about-me.css
+++ b/css/partials/_about-me.css
@@ -1,7 +1,9 @@
 .about-me {
+  position: relative;
   width: 100%;
   height: 90vh;
   background-color: #fff2dd;
+  z-index: 3;
 }
 
 .about-me > h1 {
@@ -24,4 +26,8 @@
   font-weight: 400;
   line-height: 30px;
   width: 650px;
+}
+
+.about-me > .triangle {
+  border-color: #fff2dd transparent transparent transparent;
 }
