--- a/css/partials/_intro.css
+++ b/css/partials/_intro.css
@@ -3,6 +3,7 @@
   width: 100%;
   height: 90vh;
   background-color: #300000;
+  z-index: 4;
 }
 
 .intro > h1 {
@@ -27,4 +28,8 @@
 
 .intro-noun > span {
   position: absolute;
+}
+
+.intro > .triangle {
+  border-color: #300000 transparent transparent transparent;
 }
