--- a/css/partials/_about-me.css
+++ b/css/partials/_about-me.css
@@ -1,31 +1,33 @@
 .about-me {
   position: relative;
   width: 100%;
-  height: 90vh;
   background-color: #fff2dd;
   z-index: 3;
 }
 
 .about-me > h1 {
   text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 78px; 
-  color:  #333333;
+  margin: 64px auto 0 auto; /* 78px - h1 line height padding = 64px */
+  color:  #333;
   font-size: 64px;
   font-weight: 700;
+  line-height: 1;
 }
 
-.about-me > p {
-  text-align: left;
-  margin-left: 150px;
-  margin-right: 150px;
+.about-me-paragraphs {
+  margin-top: 36px; /* 50px - h1 line height padding = 36px */
+  margin-bottom: 80px;
+}
+
+.about-me p {
   font-family: "ff-tisa-web-pro";
-  color: #333333;
   font-size: 22px;
-  font-weight: 400;
-  line-height: 30px;
-  width: 650px;
+  color: #333;
+  width: 30em;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  text-indent: 2em;
 }
 
 .about-me > .triangle {
