--- a/css/partials/_about-me.css
+++ b/css/partials/_about-me.css
@@ -9,7 +9,6 @@
   text-align: center;
   margin: 64px auto 0 auto; /* 78px - h1 line height padding = 64px */
   color:  #333;
-  font-size: 64px;
   font-weight: 700;
   line-height: 1;
 }
@@ -21,9 +20,7 @@
 
 .about-me p {
   font-family: "ff-tisa-web-pro";
-  font-size: 22px;
   color: #333;
-  width: 30em;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
@@ -39,19 +36,36 @@
   visibility: hidden;
 }
 
-input[type=checkbox]:checked ~ [for="read-more"] {
-  top: 600px;
-}
-
 [for="read-more"],
 input[type=checkbox] {
   position: absolute;
-  top: 475px;
   left: 50%;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
   cursor: pointer;
+}
+
+@media (min-width: 320px) {
+  [for="read-more"],
+  input[type=checkbox] {
+    top: 515px;
+  }
+  
+  input[type=checkbox]:checked ~ [for="read-more"] {
+    top: 647px;
+  }
+}
+
+@media (min-width: 480px) {
+  [for="read-more"],
+  input[type=checkbox] {
+    top: 475px;
+  }
+
+  input[type=checkbox]:checked ~ [for="read-more"] {
+    top: 600px;
+  }
 }
 
 [for="read-more"] {
