--- a/css/partials/_intro.css
+++ b/css/partials/_intro.css
@@ -17,6 +17,7 @@
   padding: 0 25px;
   width: 100%;
   text-align: center;
+  font-size: 46px;
   font-weight: 700;
   color: #eee;
 }
@@ -32,4 +33,10 @@
 
 .intro > .triangle {
   border-color: #300000 transparent transparent transparent;
+}
+
+@media (max-width: 768px) {
+  .intro > h1 {
+    font-size: 32px;
+  }
 }
