--- a/css/base/_globals.css
+++ b/css/base/_globals.css
@@ -2,8 +2,15 @@
   margin: 0;
 }
 
+a {
+  color: #333;
+  text-decoration: underline;
+}
+
 a:hover {
-  text-decoration: none;
+  color: #7ba6a8;
+  -webkit-transition: all .2s linear;
+          transition: all .2s linear;
 }
 
 .triangle {
