--- a/css/partials/_contact-me.css
+++ b/css/partials/_contact-me.css
@@ -1,8 +1,15 @@
 .contact-me {
-  background: #333333;
-  text-align: center;
+  position: relative;
+  width: 100%;
   height: 90vh;
-  padding: 100px;
-  color: white;
+  background-color: #333;
   z-index: 1;
+}
+
+.contact-me > h1 {
+  text-align: center;
+  margin: 64px auto 0 auto; /* 78px - h1 line height padding = 64px */
+  color:  #fff;
+  font-weight: 700;
+  line-height: 1;
 }
