--- a/css/base/_globals.css
+++ b/css/base/_globals.css
@@ -14,3 +14,9 @@
   border-style: solid;
   border-width: 33px 42.5px 0 42.5px;
 }
+
+.form-control,
+.form-control:focus {
+  box-shadow: none;
+  border: 0;
+}
