--- a/css/partials/_contact-me.css
+++ b/css/partials/_contact-me.css
@@ -1,7 +1,6 @@
 .contact-me {
   position: relative;
   width: 100%;
-  height: 90vh;
   background-color: #333;
   z-index: 1;
 }
@@ -12,4 +11,36 @@
   color:  #fff;
   font-weight: 700;
   line-height: 1;
+}
+
+.contact-me > .form-group {
+  margin: 0 auto;
+}
+
+#email,
+#message,
+.btn-send {
+  display: block;
+  color: #333;
+  width: 60%;
+}
+
+#email {
+  margin: 50px auto 0 auto;
+  height: 45px;
+}
+
+#message {
+  margin: 10px auto 0 auto;
+  height: 225px;
+}
+
+.btn-send {
+  margin: 10px auto 80px auto;
+}
+
+.btn-send,
+.btn-send:hover {
+  background-color: #7ba6a8;
+  color: #fff;
 }
