--- a/css/base/_typography.css
+++ b/css/base/_typography.css
@@ -66,7 +66,11 @@ body {
   }
   
   p {
-    width: 30em;
+    width: 33em;
+  }
+  
+  .works p {
+    width: 27em;
   }
 }
 
@@ -83,7 +87,11 @@ body {
   }
   
   p {
-    width: 30em;
+    width: 33em;
+  }
+
+  .works p {
+    width: 27em;
   }
 }
 
