--- a/css/base/_globals.css
+++ b/css/base/_globals.css
@@ -1,3 +1,19 @@
+p {
+  font-family: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
+}
+
+a,
+a:focus {
+  color: #333;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #7ba6a8;
+  -webkit-transition: all .2s linear;
+          transition: all .2s linear;
+}
+
 .row {
   margin: 0;
 }
