--- a/css/partials/_intro.css
+++ b/css/partials/_intro.css
@@ -17,7 +17,7 @@
   padding: 0 25px;
   width: 100%;
   text-align: center;
-  font-size: 46px;
+  font-size: 32px;
   font-weight: 700;
   color: #eee;
 }
@@ -41,8 +41,14 @@
   border-color: #300000 transparent transparent transparent;
 }
 
-@media (max-width: 768px) {
+@media (min-width: 992px) {
   .intro > h1 {
-    font-size: 32px;
+    font-size: 46px;
+  }
+}
+
+@media(min-width: 1200px) {
+  .intro > h1 {
+    font-size: 46px;
   }
 }
