--- a/css/partials/_about-me.css
+++ b/css/partials/_about-me.css
@@ -37,10 +37,15 @@
 input[type=checkbox] {
   position: absolute;
   left: 50%;
+  top: 597px;
   -webkit-transform: translateX(-50%);
       -ms-transform: translateX(-50%);
           transform: translateX(-50%);
   cursor: pointer;
+}
+
+input[type=checkbox]:checked ~ [for="read-more"] {
+  top: 751px;
 }
 
 @media (min-width: 320px) {
@@ -48,7 +53,7 @@ input[type=checkbox] {
   input[type=checkbox] {
     top: 510px;
   }
-  
+
   input[type=checkbox]:checked ~ [for="read-more"] {
     top: 645px;
   }
@@ -80,12 +85,7 @@ input[type=checkbox] {
   border-radius: 6px;
   background-color: #7ba6a8;
   height: 45px;
-}
-
-@media (min-width: 320px) {
-  [for="read-more"] {
-    width: 220px;
-  }
+  width: 220px;
 }
 
 @media (min-width: 480px) {
