--- a/css/base/_globals.scss
+++ b/css/base/_globals.scss
@@ -1,5 +1,9 @@
+body {
+  font-family: $font-family-sans-serif;
+}
+
 p {
-  font-family: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
+  font-family: $font-family-serif;
 }
 
 a,
