--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,10 @@
+@import "vendor/bootstrap-sass/bootstrap";
+
+@import "base/variables";
 @import "base/globals";
 @import "base/typography";
 
 @import "partials/navbar";
-@import "partials/header";
 @import "partials/intro";
 @import "partials/about-me";
 @import "partials/works";
