--- a/css/base/_globals.scss
+++ b/css/base/_globals.scss
@@ -14,8 +14,7 @@ a:focus {
 
 a:hover {
   color: #7ba6a8;
-  -webkit-transition: all .2s linear;
-          transition: all .2s linear;
+  @include transition(all .2s linear);
 }
 
 .btn[disabled] {
@@ -30,9 +29,7 @@ a:hover {
   position: absolute;
   left: 50%;
   bottom: -32px;
-  -webkit-transform: translateX(-50%);
-      -ms-transform: translateX(-50%);
-          transform: translateX(-50%);
+  @include transform(translateX(-50%));
   width: 0;
   height: 0;
   border-style: solid;
