--- a/css/partials/_intro.scss
+++ b/css/partials/_intro.scss
@@ -10,9 +10,7 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  @include transform(translate(-50%, -50%));
   margin: 0;
   padding: 0 25px;
   width: 100%;
