--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -1,2 +1,4 @@
 $font-family-sans-serif: "proxima-nova", "Helvetica Neue", helvetica, arial, sans-serif;
 $font-family-serif: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
+
+$font-size-base: 16px;
