--- a/css/base/_variables.scss
+++ b/css/base/_variables.scss
@@ -2,3 +2,5 @@ $font-family-sans-serif: "proxima-nova", "Helvetica Neue", helvetica, arial, san
 $font-family-serif: "ff-tisa-web-pro", Georgia, "Times New Roman", Times, serif;
 
 $font-size-base: 16px;
+
+$screen-xxs: 320px;
