--- a/css/partials/_about-me.scss
+++ b/css/partials/_about-me.scss
@@ -38,7 +38,7 @@ input[type=checkbox]:checked ~ [for="read-more"] {
   @include transition(top .25s ease-in-out);
 }
 
-@media (min-width: 320px) {
+@media (min-width: $screen-xxs) {
   [for="read-more"],
   input[type=checkbox] {
     top: 510px;
@@ -49,7 +49,7 @@ input[type=checkbox]:checked ~ [for="read-more"] {
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: $screen-xs) {
   [for="read-more"],
   input[type=checkbox] {
     top: 455px;
@@ -60,7 +60,7 @@ input[type=checkbox]:checked ~ [for="read-more"] {
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm) {
   [for="read-more"],
   input[type=checkbox] {
     top: 475px;
@@ -78,13 +78,13 @@ input[type=checkbox]:checked ~ [for="read-more"] {
   width: 220px;
 }
 
-@media (min-width: 480px) {
+@media (min-width: $screen-xs) {
   [for="read-more"] {
     width: 300px;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm) {
   [for="read-more"] {
     width: 500px;
   }
