--- a/css/partials/_contact-me.scss
+++ b/css/partials/_contact-me.scss
@@ -25,7 +25,7 @@
   width: 260px;
 }
 
-@media (min-width: 320px) {
+@media (min-width: $screen-xxs) {
   #email,
   #message,
   .btn-send {
@@ -33,7 +33,7 @@
   }
 }
 
-@media (min-width: 480px) {
+@media (min-width: $screen-xs) {
   #email,
   #message,
   .btn-send {
@@ -41,7 +41,7 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: $screen-sm) {
   #email,
   #message,
   .btn-send {
@@ -49,7 +49,7 @@
   }
 }
 
-@media (min-width: 992px) {
+@media (min-width: $screen-md) {
   #email,
   #message,
   .btn-send {
