--- a/css/partials/_works.scss
+++ b/css/partials/_works.scss
@@ -40,7 +40,7 @@
   padding-left: 20px;
 }
 
-@media (min-width: 992px) {
+@media (min-width: $screen-md) {
   .works .container-logo {
     position: relative;
     top: 50%;
