--- a/css/base/_globals.scss
+++ b/css/base/_globals.scss
@@ -8,12 +8,12 @@ p {
 
 a,
 a:focus {
-  color: #333;
+  color: $black;
   text-decoration: underline;
 }
 
 a:hover {
-  color: #7ba6a8;
+  color: $link-hover-color;
   @include transition(all .2s linear);
 }
 
@@ -29,11 +29,11 @@ a:hover {
   position: absolute;
   left: 50%;
   bottom: -32px;
-  @include transform(translateX(-50%));
   width: 0;
   height: 0;
   border-style: solid;
   border-width: 33px 42.5px 0 42.5px;
+  @include transform(translateX(-50%));
   -moz-transform: translateX(-50%) scale(0.9999);
 }
 
