--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 @import "vendor/bootstrap-sass/bootstrap";
 
 @import "base/variables";
+@import "base/colors";
 @import "base/globals";
 @import "base/typography";
 
