--- a/css/main.scss
+++ b/css/main.scss
@@ -1,10 +1,9 @@
 @import "vendor/bourbon/bourbon";
 @import "vendor/bootstrap-sass/bootstrap";
 
-@import "base/variables";
-@import "base/colors";
-@import "base/globals";
 @import "base/typography";
+@import "base/colors";
+@import "base/overrides";
 
 @import "partials/navbar";
 @import "partials/intro";
