--- a/css/partials/_intro.scss
+++ b/css/partials/_intro.scss
@@ -1,12 +1,10 @@
 .intro {
-  position: relative;
-  width: 100%;
   height: 90vh;
   background-color: $intro-background-color;
   z-index: 4;
 }
 
-.intro > h1 {
+.intro-main-heading {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -17,7 +15,19 @@
   text-align: center;
   font-size: $font-size-scale-2;
   font-weight: 700;
-  color: #eee;
+  color: $white;
+}
+
+@media (min-width: $screen-md) {
+  .intro-main-heading {
+    font-size: $font-size-scale-3;
+  }
+}
+
+@media(min-width: $screen-lg) {
+  .intro-main-heading {
+    font-size: $font-size-scale-3;
+  }
 }
 
 .intro a,
@@ -37,16 +47,4 @@
 
 .intro > .triangle {
   border-color: $intro-background-color transparent transparent transparent;
-}
-
-@media (min-width: $screen-md) {
-  .intro > h1 {
-    font-size: $font-size-scale-3;
-  }
-}
-
-@media(min-width: $screen-lg) {
-  .intro > h1 {
-    font-size: $font-size-scale-3;
-  }
 }
